<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>json-processing</groupId>
    <artifactId>json-processing</artifactId>

    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>7</source>
                    <target>7</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.0.0</version>

                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <configuration>
                            <files>
                                <file>./data-json-processing/src/main/resources/config.properties</file>
                            </files>
                        </configuration>
                    </execution>
                    <execution>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <archive>
                                <manifest>
                                    <mainClass>ru.task.processing.json.analysis.AnalysisData</mainClass>
                                </manifest>
                            </archive>
                        </configuration>
                        <id>make-assembly1</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>


                    <execution>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <archive>
                                <manifest>
                                    <mainClass>ru.task.processing.json.loading.LoadingData</mainClass>
                                </manifest>
                            </archive>

                        </configuration>
                        <id>make-assembly2</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.11</artifactId>
            <version>2.3.2</version>
        </dependency>
    </dependencies>
    <properties>
        <jvm.config>-Xms1002M</jvm.config>
        <jvm.config>-Xmx4048M</jvm.config>
        <jvm.config>-XX:MaxPermSize=4048M</jvm.config>
        <jvm.config>-XX:+CMSClassUnloadingEnabled</jvm.config>
    </properties>


</project>